Bug 87967 - FILEOPEN: Impress crashes loading a PPS file (Win x64 and Mac OS X)
Summary: FILEOPEN: Impress crashes loading a PPS file (Win x64 and Mac OS X)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.0.1 target:5.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-02 13:23 UTC by Gaël Beaudoin
Modified: 2017-10-19 18:00 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Specific slide that make impress crash (1.97 MB, application/vnd.ms-powerpoint)
2015-01-03 13:52 UTC, Gaël Beaudoin
Details
osx 10.10.1 LO nightly 2nd jan 2015 crashlog (85.46 KB, text/plain)
2015-01-03 17:16 UTC, retired
Details
(1) Bad access (9.71 KB, image/png)
2015-09-16 12:47 UTC, Geoffrey
Details
(2) Missing component (21.14 KB, image/png)
2015-09-16 12:48 UTC, Geoffrey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gaël Beaudoin 2015-01-02 13:23:23 UTC
When I try to open this PPS file, Libre Office crashes.

http://dl.free.fr/vOZaqDR8K

(note : the link will stop working if the file is not downloaded for more than 30 days).
Comment 1 Robinson Tryon (qubit) 2015-01-02 20:14:13 UTC
(In reply to Gaël Beaudoin from comment #0)
> When I try to open this PPS file, Libre Office crashes.
> 
> http://dl.free.fr/vOZaqDR8K

NOREPRO with LO 4.4.0.1 + Ubuntu 14.04
The file opens, and I can navigate through the slides (and learn a bit about firefighting in French! :-)

Might be Windows-only problem.
Whiteboard -> needsWindows

> (note : the link will stop working if the file is not downloaded for more
> than 30 days).

Any chance that you can remove some slides and still see the crash? It would be great to have the test file uploaded to Bugzilla, but it does need to be < 3MB.
Comment 2 Buovjaga 2015-01-02 20:36:30 UTC
Il ne plante pas ici.

Testé avec:

Win 7 64-bit 4.3.5.2 et Version: 4.5.0.0.alpha0+
Build ID: 57626f2132f73e4e42b31e364b25c5867336e718
TinderBox: Win-x86@42, Branch:master, Time: 2014-12-26_09:26:33
Comment 3 Gaël Beaudoin 2015-01-02 21:09:29 UTC
I will try with 4.4.0.RC1 and with my linux libre office too, and report.
As for removing some slides, that would take some time, but i'll try :)
Comment 4 Gaël Beaudoin 2015-01-02 21:23:36 UTC
So, it crashes too with the 4.4.0.1 version. I don't have anything to remove the slides on my windows install, I'll try on linux and see if I can isolate the buggy slide, but I'll do that tomorrow.
Comment 5 Yousuf Philips (jay) (retired) 2015-01-02 22:00:02 UTC
Didnt crash for me on Windows 7. Which version of Windows are you running Gael?

Version: 4.4.0.1.0+
Build ID: aa568d94112ff44caabf9f7e27dd52af4b3813b3
TinderBox: Win-x86@51-TDF, Branch:libreoffice-4-4, Time: 2014-12-23_21:03:44
Comment 6 Gaël Beaudoin 2015-01-03 10:33:37 UTC
Sorry I forgot this important piece of info :

Win 8.1 64bits
Version: 4.4.0.1
Build ID: 1ba9640ddd424f1f535c75bf2b86703770b8cf6f
Locale : fr_FR
Comment 7 Buovjaga 2015-01-03 10:52:27 UTC
Version field is for the earliest version the problem appeared in.
Comment 8 Gaël Beaudoin 2015-01-03 13:52:36 UTC
Created attachment 111685 [details]
Specific slide that make impress crash

I've split the original file and this is the only one that still crashes.
Comment 9 tommy27 2015-01-03 17:03:01 UTC
tested under Win8.1 x64
attachment 111685 [details] crashes LibO 4.5.0.0alpha, 4.3.5.2 and 4.1.0.4 (did not try older releases)

however the same file crashes PowerPoint Viewer 2003 as well.
this make me wonder if that .pps file is a valid one and not a corrupted one...
Comment 10 Gaël Beaudoin 2015-01-03 17:09:46 UTC
Note that I created the file with impress simply by deleting other slides and saving it as a new PPS file. I think the content itself is the problem. Impress would not have created a new corrupted file?
Comment 11 retired 2015-01-03 17:16:11 UTC
OSX 10.10.1 LO 4.5 nightly from 2nd jan 2015

attaching crash log
Comment 12 retired 2015-01-03 17:16:47 UTC
Created attachment 111690 [details]
osx 10.10.1 LO nightly 2nd jan 2015 crashlog
Comment 13 Geoffrey 2015-01-03 18:44:08 UTC
Crashes on Windows 8 (no 8.1) 64 bit too, using LibreOffice 4.3.5.2.
Comment 14 Buovjaga 2015-01-03 19:17:04 UTC
Tried attachment 111690 [details] on an Asus T100 with Win 8.1 32-bit and LibreOffice 4.4 RC1, but no crash.
Comment 15 Yousuf Philips (jay) (retired) 2015-01-03 22:36:58 UTC
@Gael: Which application did you use to create the original file?
Comment 16 Gaël Beaudoin 2015-01-04 22:23:31 UTC
I did not create it myself, and have no idea what has been used, unfortunately.
Comment 17 Geoffrey 2015-01-05 10:31:14 UTC
Not reproducible on Manjaro Linux 0.8.11 64 bit using LibreOffice 4.3.5.2.0.

Seems Windows 64 bit specific (and maybe OS X too).
Comment 18 Robinson Tryon (qubit) 2015-01-10 23:18:14 UTC
(In reply to foss from comment #12)
> Created attachment 111690 [details]
> osx 10.10.1 LO nightly 2nd jan 2015 crashlog

Guess it's not windows-only :-)

Whiteboard -> (remove 'needsWindows')
Comment 19 Xisco Faulí 2015-09-16 11:10:21 UTC
This issue is still present in

Version: 5.0.1.2
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: es-ES (es_ES)

on Windows 7 (64-bit)
Comment 20 Geoffrey 2015-09-16 12:47:04 UTC
* This issue is NOT present in Manjaro Linux 64 bit.
* This issue is present in Windows 7 64 bit. I have two screenshots with error messages. 1-windows7-64-bad-access-seh-exception.png and 2-windows7-64-missing-component.png (1- was first shown, after that 2-)
Comment 21 Geoffrey 2015-09-16 12:47:39 UTC
Created attachment 118769 [details]
(1) Bad access
Comment 22 Geoffrey 2015-09-16 12:48:00 UTC
Created attachment 118770 [details]
(2) Missing component
Comment 23 Xisco Faulí 2015-09-16 12:59:09 UTC
I'm sorry but my previous comment 19 was incorrect.

I've just checked it again and I couldn't reproduce the crash with

Version: 5.0.1.2
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: es-ES (es_ES)

on Windows 7 (64-bit)

@Geoffrey: Have you tried with Libreoffice 5.0.1.2? Which locale do you use?
Comment 24 Armin Le Grand (collabora) 2015-11-06 17:23:49 UTC
No crash on LO Win7 5.1.0.0.alpha1+, loads the slide and starts slideshow
Comment 25 Buovjaga 2015-11-06 20:36:17 UTC
Could you Windows crashing guys get a bt: https://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg
Comment 26 tommy27 2015-11-07 07:04:01 UTC
(In reply to Armin Le Grand from comment #24)
> No crash on LO Win7 5.1.0.0.alpha1+, loads the slide and starts slideshow

@Armin
are you on a 32 or 64 bit system?

I can still reproduce the bug on Win8.1 x64 using LibO 5.0.3.1 and latest 5.1.0.0 daily build.

it crashes with LibO 3.6.0, OOo 3.3.0 and AOO 4.1.0 so the bug is "inherited from OOo"

@foss
is it still a crasher on Mac OS?
is your computer 32 or 64 bits?
Comment 27 Commit Notification 2016-05-27 08:25:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9d2302d4d0732a0c1203bbb7c0182b8de59403d

Related: tdf#87967 valgrind reported invalid reads on 1 pixel wide bitmap

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2016-05-27 08:26:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6fb88a0c67150a751f59ebcba5f5419b24e6f4a7&h=libreoffice-5-2

Related: tdf#87967 valgrind reported invalid reads on 1 pixel wide bitmap

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2016-05-30 08:39:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=91bf25bce0c8aa6c4c303fed3a127cdb611b36c2&h=libreoffice-5-1

Related: tdf#87967 valgrind reported invalid reads on 1 pixel wide bitmap

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Xisco Faulí 2016-09-15 22:38:42 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 31 Xisco Faulí 2017-09-29 08:51:18 UTC Comment hidden (obsolete)
Comment 32 Xisco Faulí 2017-10-19 15:14:58 UTC
@tommy27, can you still reproduce this issue?
If not, could you please close it as RESOLVED FIXED?
Comment 33 Alex Thurgood 2017-10-19 15:36:41 UTC
Certainly no crash in 

Version: 6.0.0.0.alpha0+
Build ID: 75539963e621faafdc0d3ef6759cadb2e0a5d9b4
CPU threads: 8; OS: Mac OS X 10.12.6; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group
Comment 34 Roman Kuznetsov 2017-10-19 16:21:08 UTC
no crach in LO 5.4.3.1 (x64) on Windows 7 x86_64

it just opens in full screen mode, shows one slide and after my click closes together LibreOffice

RESOLVED FIXED
Comment 35 tommy27 2017-10-19 18:00:26 UTC
(In reply to Xisco Faulí from comment #32)
> @tommy27, can you still reproduce this issue?
> If not, could you please close it as RESOLVED FIXED?

no more crash under Win7 x64.
tested with LibO 5.3.6.1