Related: tdf#87967 valgrind reported invalid reads on 1 pixel wide bitmap

Change-Id: Iddd18280c780d8b9f5e11fcc2af80749917192c4
(cherry picked from commit a9d2302d4d0732a0c1203bbb7c0182b8de59403d)
(cherry picked from commit 6fb88a0c67150a751f59ebcba5f5419b24e6f4a7)
Reviewed-on: https://gerrit.libreoffice.org/25533
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 91bf25bce0c8aa6c4c303fed3a127cdb611b36c2)